--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	 <title>Navbar menu Responsive</title>
 	 <link rel="stylesheet" href="style.css">
+	 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
 <nav>
-	  <label class="Logo">my Logo</label>
+	  <input type="checkbox" id="check">
+		<label for="check" class="checkbtn">
+			<i class="fas fa-bars"></i>
+    </label>
+	  <label class="logo"> My Logo </label>
 		<ul>
-			 <li><a href="#"></a>Home</li>
-			 <li><a href="#"></a>Services</li>
-			 <li><a href="#"></a>About Us</li>
-			 <li><a href="#"></a>Contact Us</li>
+			 <li><a href="#">Home</a></li>
+			 <li><a href="#">Services</a></li>
+			 <li><a href="#">About Us</a></li>
+			 <li><a href="#">Contact Us</a></li>
 		</ul>
 </nav>
 <section>
