--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html>
-<head>
-   <meta charset="utf-8">
-	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	 <title>Navbar menu Responsive</title>
-	 <link rel="stylesheet" href="style.css">
-	 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-</head>
-<body>
-<nav>
-	  <input type="checkbox" id="check">
-		<label for="check" class="checkbtn">
-			<i class="fas fa-bars"></i>
-    </label>
-	  <label class="logo"> My Logo </label>
-		<ul>
-			 <li><a href="#">Home</a></li>
-			 <li><a href="#">Services</a></li>
-			 <li><a href="#">About Us</a></li>
-			 <li><a href="#">Contact Us</a></li>
-		</ul>
-</nav>
-<section>
-	<h1>content</h1>
-</section>
-</body>
-
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Navbar menu Responsive</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  </head>
+  <body>
+    <nav>
+      <input type="checkbox" id="check" />
+      <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+      </label>
+      <label class="logo"> My Logo </label>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </nav>
+    <section>
+      <div class="container">
+        <img id="large-image" src="images/charlotte.jpeg" />
+        <div class="top-left">Belle's maids to perfection</div>
+      </div>
+    </section>
+    <div id="aboutus">
+      <h3>Welcome to Belle's maids to perfection</h3>
+    </div>
+    <div id="services">
+      <h3>Services</h3>
+    </div>
+    <div id="contactUs">
+      <h3>Contact us</h3>
+    </div>
+  </body>
 </html>
