--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
   <body>
+
     <nav>
       <input type="checkbox" id="check" />
       <label for="check" class="checkbtn">
@@ -16,9 +17,9 @@
       <label class="logo"> My Logo </label>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="#aboutus">About Us</a></li>
+        <li><a href="#Services">Services</a></li>
+        <li><a href="#contactUs">Contact Us</a></li>
       </ul>
     </nav>
     <section>
