linked nav buttons

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <label class="logo"> My Logo </label>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="#aboutus">About Us</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contactUs">Contact Us</a></li>
       </ul>
     </nav>
     <section>
