resoponsive added picture deleted

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     </nav>
     <section>
       <div class="container">
-        <img id="large-image" src="images/charlotte.jpeg" />
+		  <div class="large-image">image</div>
+      <!-- <img id="large-image" src="images/charlotte.jpeg" /> -->
         <div class="top-left">Belle's maids to perfection</div>
       </div>
     </section>
