--- a/index.html
+++ b/index.html
@@ -11,31 +11,32 @@
 
     <nav>
       <input type="checkbox" id="check" />
-      <label for="check" class="checkbtn">
-        <i class="fas fa-bars"></i>
+      <label for="check">
+        <i class="fas fa-bars" id="btn"></i>
+        <i class="fas fa-times" id="cancel"></i>
       </label>
       <label class="logo"> My Logo </label>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#aboutus">About Us</a></li>
-        <li><a href="#Services">Services</a></li>
-        <li><a href="#contactUs">Contact Us</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contactus">Contact Us</a></li>
       </ul>
     </nav>
     <section>
       <div class="container">
 		  <div class="large-image">image</div>
       <!-- <img id="large-image" src="images/charlotte.jpeg" /> -->
-        <div class="top-left">Belle's maids to perfection</div>
+        <div class="top-left">Belle's Maids to Perfection</div>
       </div>
     </section>
     <div id="aboutus">
-      <h3>Welcome to Belle's maids to perfection</h3>
+      <h3>Welcome to Belle's Maids to perfection</h3>
     </div>
     <div id="services">
       <h3>Services</h3>
     </div>
-    <div id="contactUs">
+    <div id="contactus">
       <h3>Contact us</h3>
     </div>
   </body>
