txt added to about us and more resposive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navbar menu Responsive</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cookie&family=Oxygen:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
   <body>
@@ -23,13 +28,27 @@
     </nav>
     <section>
       <div class="container">
-		  <div class="large-image">image</div>
-      <!-- <img id="large-image" src="images/charlotte.jpeg" /> -->
+        <div class="large-image">image</div>
+        <!-- <img id="large-image" src="images/charlotte.jpeg" /> -->
         <div class="top-left">Belle's maids to perfection</div>
       </div>
     </section>
     <div id="aboutus">
       <h3>Welcome to Belle's maids to perfection</h3>
+      <h2>
+        we do residential and commerciwe do residential and commercial jobs from
+        offices to waxing floors even construction clean ups the construction
+        clean ups have 3 phases depending on what the customer wants.
+        Residential cleaning includes dusting,mopping,vacuuming,washing
+        surfaces, etc. Commercial cleaning we do anything from cleaning class a
+        facility’s to class c. We are license and insured. We do contract
+        cleaning on the commercial partal jobs from offices to waxing floors
+        even construction clean ups the construction clean ups have 3 phases
+        depending on what the customer wants. Residential cleaning includes
+        dusting,mopping,vacuuming,washing surfaces, etc. Commercial cleaning we
+        do anything from cleaning class a facility’s to class c. We are license
+        and insured. We do contract cleaning on the commercial part
+      </h2>
     </div>
     <div id="services">
       <h3>Services</h3>
