fixed container image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <i class="fas fa-bars" id="btn"></i>
         <i class="fas fa-times" id="cancel"></i>
       </label>
-      <label class="logo"> My Logo </label>
+      <label image></label>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#aboutus">About Us</a></li>
@@ -29,12 +29,8 @@
       </ul>
     </nav>
     <section>
-      <div class="container">
-        <div class="large-image">image</div>
-        <!-- <img id="large-image" src="images/charlotte.jpeg" /> -->
-        <div class="top-left">Belle's maids to perfection</div>
-      </div>
-    </section>
+      <div class="container">Belle's maids to perfection</div>
+  </section>
     <div id="aboutus">
       <h3>Welcome to Belle's maids to perfection</h3>
       <h2>
