added logo, added font

--- a/index.html
+++ b/index.html
@@ -3,24 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navbar menu Responsive</title>
+    <title>Belle's Maids to perfection</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cookie&family=Oxygen:wght@300&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Tangerine">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
   <body>
-
-    <nav>
+   <nav>
+     <img src="images/belle's-logo.png" alt="">
       <input type="checkbox" id="check" />
       <label for="check">
         <i class="fas fa-bars" id="btn"></i>
         <i class="fas fa-times" id="cancel"></i>
       </label>
-      <label image></label>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#aboutus">About Us</a></li>
