--- a/index.html
+++ b/index.html
@@ -47,8 +47,30 @@
     <div id="services">
       <h3>Services</h3>
     </div>
-    <div id="contactus">
-      <h3>Contact us</h3>
-    </div>
+    <section>
+      <div class="contactUs">
+          <h2>Contact us</h2>
+        <form action="contactform.php" method="post">
+          <div class="form-group">
+            <label for="name">Full name</label>
+            <input type="text" id="name" name="name" />
+          </div>
+          <div class="form-group">
+            <label for="number">Phone Number</label>
+            <input type="text" id="number" name="number" />
+          </div>
+          <div class="form-group">
+            <label for="mail">Email</label>
+            <input type="text" id="mail" name="mail" />
+          </div>
+          <div class="form-group">
+            <label for="message">message</label>
+            <textarea id="message" name="message" cols="30" rows="10"></textarea>
+          </div>
+          <button type="submit" name="submit">submit</button>
+        </form>
+      </div>
+    </section>
+ 
   </body>
 </html>
